--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -13,7 +13,7 @@ jobs:
         run: echo "${PWD}/vendor/bin" >> $GITHUB_PATH
         
       - name: Run linters php codesniff
-        uses: thiar/lint-action@master
+        uses: thiar/lint-action@master-php-security
         with:
           php_codesniffer: true
           # Optional: Ignore warnings
